# fp

./: .codecov.yml  .codespell_words  .gitignore  .pre-commit-config.yaml  1__functions__that__can__fail_8md.html  2__combining__results_8md.html  3__chaining__functions_8md.html  4__validate_8md.html  CHANGELOG.rst  CMakeLists.txt  CMakeLists_8txt.html  CNAME  CONTRIBUTING_8md.html  Doxyfile  README.md  README_8md.html  _21__functions__that__can__fail_8md.html  _22__combining__results_8md.html  _23__chaining__functions_8md.html  all_8hpp.html  all_8hpp__dep__incl.map  all_8hpp__dep__incl.md5  all_8hpp__incl.map  all_8hpp__incl.md5  all_8hpp_source.html  annotated.html  annotated_dup.js  classCurried-members.html  classCurried.html  classes.html  classtl_1_1bad__expected__access-members.html  classtl_1_1bad__expected__access.html  classtl_1_1expected-members.html  classtl_1_1expected.html  classtl_1_1expected_a06386fe6a6964a300b495d7f9b026297_cgraph.md5  classtl_1_1expected_a0f173ccbdbb2df23a3a1e80320a335c3_cgraph.map  classtl_1_1expected_a0f173ccbdbb2df23a3a1e80320a335c3_cgraph.md5  classtl_1_1expected_a0f173ccbdbb2df23a3a1e80320a335c3_icgraph.map  classtl_1_1expected_a0f173ccbdbb2df23a3a1e80320a335c3_icgraph.md5  classtl_1_1expected_a46c1021bcc084694446ec0d17fef0f49_cgraph.map  (+654 more)
.github/ISSUE_TEMPLATE/: default.yaml  scenario.yaml
.github/workflows/: ci.yaml  doxygen.yaml  format.yaml
cmake/: Sanitizers.cmake
doc/: 0_getting_started.md  1_functions_that_can_fail.md  1_returning_results.md  2_combining.md  2_combining_results.md  3_chaining.md  3_chaining_functions.md  4_validate.md  4_validating.md  mainpage.md
docs/: 1_functions_that_can_fail.md  2_combining_results.md  3_chaining_functions.md
examples/: CMakeLists.txt  maybe_error.cpp  no_discard.cpp  result.cpp  validate_in.cpp  validate_range.cpp
include/fp/: all.hpp  macros.hpp  mbind.hpp  monad.hpp  no_discard.hpp  result.hpp  validate.hpp
include/fp/_external/: expected.hpp
include/monad/: all.hpp  mbind.hpp  no_discard.hpp  result.hpp  validate.hpp
include/monad/_external/: expected.hpp
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  defines_0.js  enums_0.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  (+71 more)
src/: result.cpp
test/: CMakeLists.txt  mbind_tests.cpp  result_tests.cpp  validate_tests.cpp
